[package]
name = "terrars-kreuzwerker-docker"
edition = "2021"
version = "0.1.2"
description = "Pre-generated Terrars Docker bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-kreuzwerker-docker"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.1.0"

[features]
config = []
container = []
data_image = []
data_logs = []
data_network = []
data_plugin = []
data_registry_image = []
image = []
network = []
plugin = []
registry_image = []
secret = []
service = []
tag = []
volume = []
